# gnuastro

./: .autom4te.cfg  .dir-locals.el  .gitignore  .mailmap  AUTHORS  COPYING.FDL  ChangeLog  Makefile.am  NEWS  README  README-hacking  THANKS  bootstrap.conf  configure.ac  developer-build  genauthors  parallel-build-in-tmpfs  tmpfs-config-make
doc/: Makefile.am  README  announce-acknowledge.txt  astrutils.texi  findversions.sh  fonts.css  formath.texi  forwebpage  forwebpage.sh  genauthors  gendocs_template  gnuastro-top.html  gnuastro.en.html  gnuastro.fr.html  gnuastro.texi  gnuastro.translist  gnuastrologo.xcf  javascript.html  release-checklist.txt  rungendocs.sh  style.css
doc/gnuastro-figures/: README
doc/plotsrc/: Makefile  README  all.tex  conversions.sh
lib/: Makefile.am  arithmetic-and.c  arithmetic-binary.c  arithmetic-binary.h  arithmetic-bitand.c  arithmetic-bitlsh.c  arithmetic-bitor.c  arithmetic-bitrsh.c  arithmetic-bitxor.c  arithmetic-divide.c  arithmetic-eq.c  arithmetic-ge.c  arithmetic-gt.c  arithmetic-le.c  arithmetic-lt.c  arithmetic-minus.c  arithmetic-modulo.c  arithmetic-multiply.c  arithmetic-ne.c  arithmetic-onlyint.c  arithmetic-or.c  arithmetic-plus.c  arithmetic.c  array.c  arraymanip.c  astrthreads.c  binary.c  blank.c  box.c  changetype.c  changetype.h  checkset.c  checkset.h  commonargs.h  commonopts.h  commonparams.h  config.h.in  configfiles.c  configfiles.h  convolve.c  (+64 more)
lib/gnuastro/: README  arithmetic.h  array.h  arraymanip.h  binary.h  blank.h  box.h  checkset.h  commonargs.h  commonparams.h  configfiles.h  convolve.h  cosmology.h  data.h  dimension.h  eps.h  fits.h  fitsarrayvv.h  fixedstringmacros.h  git.h  gnuastro.h  interpolate.h  jpeg.h  kdtree.h  label.h  linkedlist.h  list.h  match.h  mesh.h  mode.h  multidim.h  neighbors.h  pdf.h  permutation.h  pointer.h  polygon.h  qsort.h  spatialconvolve.h  speclines.h  statistics.h  (+9 more)
lib/gnuastro-internal/: README  arithmetic-and.h  arithmetic-binary.h  arithmetic-bitand.h  arithmetic-bitlsh.h  arithmetic-bitor.h  arithmetic-bitrsh.h  arithmetic-bitxor.h  arithmetic-divide.h  arithmetic-eq.h  arithmetic-ge.h  arithmetic-gt.h  arithmetic-internal.h  arithmetic-le.h  arithmetic-lt.h  arithmetic-minus.h  arithmetic-modulo.h  arithmetic-multiply.h  arithmetic-ne.h  arithmetic-onlyint.h  arithmetic-or.h  arithmetic-plus.h  checkset.h  commonopts.h  config.h.in  fixedstringmacros.h  kernel-2d.h  options.h  tableintern.h  tile-internal.h  timing.h  wcsdistortion.h
src/convertt/: Makefile.am  args.h  astconvertt.conf  cite.h  convertt.c  convertt.h  eps.c  eps.h  jpeg.c  jpeg.h  main.c  main.h  ui.c  ui.h
src/convolve/: Makefile.am  args.h  astconvolve.conf  cite.h  convolve.c  convolve.h  main.c  main.h  ui.c  ui.h
src/cosmiccal/: Makefile.am  args.h  astcosmiccal.conf  cite.h  cosmiccal.c  cosmiccal.h  main.c  main.h  ui.c
src/imgcrop/: Makefile.am  args.h  astimgcrop.conf  astrimgcrop.conf  astrimgcrop.def  cite.h  crop.c  crop.h  imgcrop.c  imgcrop.h  main.c  main.h  ui.c  ui.h  wcsmode.c  wcsmode.h
src/mkcatalog/: Makefile.am  args.h  astmkcatalog.conf  cite.h  columns.c  columns.h  main.c  main.h  mkcatalog.c  mkcatalog.h  ui.c  ui.h
src/mkprof/: Makefile.am  args.h  astmkprof.conf  astrmkprof.conf  cite.h  ellipse.c  ellipse.h  main.c  main.h  mkprof.c  mkprof.h  oneprofile.c  oneprofile.h  profiles.c  profiles.h  ui.c  ui.h
src/mockgals/: Makefile.am  args.h  astrmockgals.conf  main.c  main.h  mockgals.c  mockgals.h  ui.c  ui.h
src/noisechisel/: Makefile.am  args.h  astnoisechisel.conf  binary.c  binary.h  cite.h  clumps.c  clumps.h  detection.c  detection.h  label.c  label.h  main.c  main.h  noisechisel.c  noisechisel.h  segmentation.c  segmentation.h  sky.c  sky.h  thresh.c  thresh.h  ui.c  ui.h
src/subtractsky/: Makefile.am  args.h  astsubtractsky.conf  cite.h  main.c  main.h  subtractsky.c  subtractsky.h  ui.c  ui.h
src/table/: Makefile.am  args.h  asttable.conf  cite.h  main.c  main.h  table.c  ui.c  ui.h
tests/: Makefile.am  basicchecks.sh  during-dev.sh  prepconf.sh
tests/arithmetic/: connected-components.sh  onlynumbers.sh  or.sh  snimage.sh  where.sh
tests/buildprog/: simpleio.c  simpleio.sh
tests/convertt/: blankch.sh  fitstojpeg.sh  fitstojpegcmyk.sh  fitstopdf.sh  fitstotxt.sh  jpegtofits.sh  jpegtotxt.sh
tests/convolve/: frequency.sh  spatial.sh  spatial_noedgecorr.sh
tests/cosmiccal/: simpletest.sh
tests/crop/: cat.txt  imgcat.sh  imgcenter.sh  imgcenternoblank.sh  imgoutpolygon.sh  imgpolygon.sh  imgpolygonout.sh  radec.sh  section.sh  wcscat.sh  wcscenter.sh  wcspolygon.sh  xcyc.sh  xcycnoblank.sh
tests/fits/: copyhdu.sh  delete.sh  print.sh  update.sh  write.sh
tests/header/: delete.sh  print.sh  update.sh  write.sh
tests/imgarith/: snimage.sh
tests/imgcrop/: cat.txt  imgcat.sh  imgoutpolygon.sh  imgpolygon.sh  makerandomcat.py  radec.sh  randcat.txt  section.sh  wcscat.sh  wcspolygon.sh  xcyc.sh  xcycnoblank.sh
tests/imgstat/: basicstats.sh
tests/imgwarp/: homographic.sh  imgwarp_scale.sh
tests/lib/: arraymanip.c  multithread.c  multithread.sh  version.c  versionc.c  versioncpp.cpp  versioncpp.sh  versioncxx.cpp  versioncxx.sh
tests/match/: merged-cols.sh  positions-1.txt  positions-2.txt  positions.sh
tests/mkcatalog/: aperturephot.sh  detections.sh  objects-clumps.sh  simple-3d.sh  simple.sh
tests/mknoise/: addnoise-3d.sh  addnoise.sh
tests/mkprof/: 3d-cat.sh  3d-cat.txt  3d-kernel.sh  clearcanvas.sh  clearcanvas.txt  ellipticalmasks.sh  ellipticalmasks.txt  inputascanvas.sh  inputascanvas.txt  mkprofcat1.txt  mkprofcat1_mask.txt  mkprofcat2.txt  mkprofcat3.txt  mkprofcat4.txt  mosaic1.sh  mosaic2.sh  mosaic3.sh  mosaic4.sh  radeccat.sh  radeccat.txt
tests/noisechisel/: noisechisel.sh
tests/script/: list-by-night.sh
tests/segment/: segment.sh
tests/statistics/: basicstats.sh  estimate_sky.sh  from-stdin.sh  stdin-input.txt
tests/subtractsky/: subtractsky.sh
tests/table/: asciitobinary.sh  asciitobinary.txt  binarytoascii.sh  fits-ascii-to-txt.sh  fits-binary-to-txt.sh  table.txt  txt-to-fits-ascii.sh  (+1 more)
(+110 files in other folders)
